--- a/elme/ImagesCell.xib
+++ b/elme/ImagesCell.xib
@@ -11,10 +11,9 @@
 			<string key="NS.object.0">1181</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
-			<string>IBUITableViewCell</string>
-			<string>IBUILabel</string>
-			<string>IBMKMapView</string>
 			<string>IBProxyObject</string>
+			<string>IBUILabel</string>
+			<string>IBUITableViewCell</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -32,19 +31,20 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUITableViewCell" id="578321382">
+			<object class="IBUITableViewCell" id="523810308">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIView" id="369843463">
-						<reference key="NSNextResponder" ref="578321382"/>
+					<object class="IBUIView" id="887223581">
+						<reference key="NSNextResponder" ref="523810308"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUILabel" id="218360202">
-								<reference key="NSNextResponder" ref="369843463"/>
+							<object class="IBUILabel" id="452238852">
+								<reference key="NSNextResponder" ref="887223581"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{176, 8}, {66, 21}}</string>
-								<reference key="NSSuperview" ref="369843463"/>
+								<string key="NSFrame">{{91, 11}, {56, 21}}</string>
+								<reference key="NSSuperview" ref="887223581"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -52,7 +52,7 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">Location</string>
+								<string key="IBUIText">Images</string>
 								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MCAwIDAAA</bytes>
@@ -73,21 +73,11 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBMKMapView" id="294330219">
-								<reference key="NSNextResponder" ref="369843463"/>
-								<int key="NSvFlags">268</int>
-								<string key="NSFrame">{{8, 8}, {160, 77}}</string>
-								<reference key="NSSuperview" ref="369843463"/>
-								<reference key="NSNextKeyView" ref="218360202"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<bool key="IBUIMultipleTouchEnabled">YES</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-							</object>
 						</array>
-						<string key="NSFrameSize">{320, 92}</string>
-						<reference key="NSSuperview" ref="578321382"/>
-						<reference key="NSNextKeyView" ref="294330219"/>
+						<string key="NSFrameSize">{320, 43}</string>
+						<reference key="NSSuperview" ref="523810308"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="452238852"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -100,14 +90,13 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 93}</string>
+				<string key="NSFrameSize">{320, 44}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSNextKeyView" ref="369843463"/>
+				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="887223581"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-				<reference key="IBUIContentView" ref="369843463"/>
-				<string key="IBUIReuseIdentifier">LocationCell</string>
-				<real value="93" key="IBUIRowHeight"/>
+				<reference key="IBUIContentView" ref="887223581"/>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -133,22 +122,16 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">2</int>
-						<reference key="object" ref="578321382"/>
+						<reference key="object" ref="523810308"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="294330219"/>
-							<reference ref="218360202"/>
+							<reference ref="452238852"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">3</int>
-						<reference key="object" ref="218360202"/>
-						<reference key="parent" ref="578321382"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">4</int>
-						<reference key="object" ref="294330219"/>
-						<reference key="parent" ref="578321382"/>
+						<reference key="object" ref="452238852"/>
+						<reference key="parent" ref="523810308"/>
 					</object>
 				</array>
 			</object>
@@ -156,18 +139,28 @@
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="2.CustomClassName">LocationCell</string>
+				<string key="2.CustomClassName">ImagesCell</string>
 				<string key="2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">4</int>
+			<int key="maxID">3</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">ImagesCell</string>
+					<string key="superclassName">UITableViewCell</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ImagesCell.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
