--- a/elme/LocationCell.xib
+++ b/elme/LocationCell.xib
@@ -32,20 +32,20 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUITableViewCell" id="578321382">
+			<object class="IBUITableViewCell" id="312295482">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIView" id="369843463">
-						<reference key="NSNextResponder" ref="578321382"/>
+					<object class="IBUIView" id="560286823">
+						<reference key="NSNextResponder" ref="312295482"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUILabel" id="218360202">
-								<reference key="NSNextResponder" ref="369843463"/>
+							<object class="IBUILabel" id="836632624">
+								<reference key="NSNextResponder" ref="560286823"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{176, 8}, {66, 21}}</string>
-								<reference key="NSSuperview" ref="369843463"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSSuperview" ref="560286823"/>
+								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -73,12 +73,13 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBMKMapView" id="294330219">
-								<reference key="NSNextResponder" ref="369843463"/>
+							<object class="IBMKMapView" id="187000169">
+								<reference key="NSNextResponder" ref="560286823"/>
 								<int key="NSvFlags">268</int>
 								<string key="NSFrame">{{8, 8}, {160, 77}}</string>
-								<reference key="NSSuperview" ref="369843463"/>
-								<reference key="NSNextKeyView" ref="218360202"/>
+								<reference key="NSSuperview" ref="560286823"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="836632624"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -86,8 +87,9 @@
 							</object>
 						</array>
 						<string key="NSFrameSize">{320, 92}</string>
-						<reference key="NSSuperview" ref="578321382"/>
-						<reference key="NSNextKeyView" ref="294330219"/>
+						<reference key="NSSuperview" ref="312295482"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="187000169"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -102,16 +104,26 @@
 				</array>
 				<string key="NSFrameSize">{320, 93}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSNextKeyView" ref="369843463"/>
+				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="560286823"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-				<reference key="IBUIContentView" ref="369843463"/>
+				<reference key="IBUIContentView" ref="560286823"/>
 				<string key="IBUIReuseIdentifier">LocationCell</string>
 				<real value="93" key="IBUIRowHeight"/>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
-			<array class="NSMutableArray" key="connectionRecords"/>
+			<array class="NSMutableArray" key="connectionRecords">
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">mapView</string>
+						<reference key="source" ref="312295482"/>
+						<reference key="destination" ref="187000169"/>
+					</object>
+					<int key="connectionID">5</int>
+				</object>
+			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
 					<object class="IBObjectRecord">
@@ -133,22 +145,22 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">2</int>
-						<reference key="object" ref="578321382"/>
+						<reference key="object" ref="312295482"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="294330219"/>
-							<reference ref="218360202"/>
+							<reference ref="187000169"/>
+							<reference ref="836632624"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">3</int>
-						<reference key="object" ref="218360202"/>
-						<reference key="parent" ref="578321382"/>
+						<reference key="object" ref="836632624"/>
+						<reference key="parent" ref="312295482"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="294330219"/>
-						<reference key="parent" ref="578321382"/>
+						<reference key="object" ref="187000169"/>
+						<reference key="parent" ref="312295482"/>
 					</object>
 				</array>
 			</object>
@@ -165,9 +177,31 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">4</int>
+			<int key="maxID">5</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">LocationCell</string>
+					<string key="superclassName">UITableViewCell</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">mapView</string>
+						<string key="NS.object.0">MKMapView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">mapView</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">mapView</string>
+							<string key="candidateClassName">MKMapView</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/LocationCell.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
