--- a/elme/DescriptionCell.xib
+++ b/elme/DescriptionCell.xib
@@ -31,20 +31,20 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUITableViewCell" id="396926315">
+			<object class="IBUITableViewCell" id="1067985882">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIView" id="12077990">
-						<reference key="NSNextResponder" ref="396926315"/>
+					<object class="IBUIView" id="139105349">
+						<reference key="NSNextResponder" ref="1067985882"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUITextView" id="552294314">
-								<reference key="NSNextResponder" ref="12077990"/>
+							<object class="IBUITextView" id="235284070">
+								<reference key="NSNextResponder" ref="139105349"/>
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{8, 8}, {304, 81}}</string>
-								<reference key="NSSuperview" ref="12077990"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSSuperview" ref="139105349"/>
+								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -66,8 +66,9 @@
 							</object>
 						</array>
 						<string key="NSFrameSize">{320, 103}</string>
-						<reference key="NSSuperview" ref="396926315"/>
-						<reference key="NSNextKeyView" ref="552294314"/>
+						<reference key="NSSuperview" ref="1067985882"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="235284070"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -82,10 +83,11 @@
 				</array>
 				<string key="NSFrameSize">{320, 104}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSNextKeyView" ref="12077990"/>
+				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="139105349"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-				<reference key="IBUIContentView" ref="12077990"/>
+				<reference key="IBUIContentView" ref="139105349"/>
 				<real value="104" key="IBUIRowHeight"/>
 			</object>
 		</array>
@@ -94,10 +96,18 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">textView</string>
-						<reference key="source" ref="396926315"/>
-						<reference key="destination" ref="552294314"/>
+						<reference key="source" ref="1067985882"/>
+						<reference key="destination" ref="235284070"/>
 					</object>
 					<int key="connectionID">6</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="235284070"/>
+						<reference key="destination" ref="1067985882"/>
+					</object>
+					<int key="connectionID">7</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -121,16 +131,16 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">2</int>
-						<reference key="object" ref="396926315"/>
+						<reference key="object" ref="1067985882"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="552294314"/>
+							<reference ref="235284070"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="552294314"/>
-						<reference key="parent" ref="396926315"/>
+						<reference key="object" ref="235284070"/>
+						<reference key="parent" ref="1067985882"/>
 					</object>
 				</array>
 			</object>
@@ -146,9 +156,31 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">6</int>
+			<int key="maxID">7</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">DescriptionCell</string>
+					<string key="superclassName">UITableViewCell</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">textView</string>
+						<string key="NS.object.0">UITextView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">textView</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">textView</string>
+							<string key="candidateClassName">UITextView</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/DescriptionCell.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
